--- a/index.html
+++ b/index.html
@@ -414,6 +414,21 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <div class="whole-work-box pb-3 mb-3">
+                      <div class="single-gallery">
+                        <div class="gallery-img">
+                          <img src="./assets/img/projects-5.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="cap-icon">
+                          <a href="https://github.com/sanghvirajit/Web_scraping_with_Python"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="g-caption">
+                          <h4>Webscraping and Stock Price Analysis using Python and BeautifulSoup </h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
