--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rajit Sanghvi, M.Sc.</h1>
-      <p>I'm <span class="typed" data-typed-items="a Data Scientist, an AI Researcher, a Computational Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an AI Researcher, a Computational Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -354,6 +354,51 @@
                     <div class="whole-work-box pb-3 mb-3">
                       <div class="single-gallery">
                         <div class="gallery-img">
+                          <img src="./assets/img/projects-6.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="cap-icon">
+                          <a href="https://github.com/sanghvirajit/Applied-Data-Science-Capstone-project"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="g-caption">
+                          <h4>IBM Applied Data Science Capstone Project</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <div class="whole-work-box pb-3 mb-3">
+                      <div class="single-gallery">
+                        <div class="gallery-img">
+                          <img src="./assets/img/projects-7.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="cap-icon">
+                          <a href="https://github.com/sanghvirajit/Machine_Learning_Projects/tree/main/02_credit_scoring"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="g-caption">
+                          <h4>Credit Risk Analysis using Machine learning</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <div class="whole-work-box pb-3 mb-3">
+                      <div class="single-gallery">
+                        <div class="gallery-img">
+                          <img src="./assets/img/projects-8.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="cap-icon">
+                          <a href="https://github.com/sanghvirajit/Machine_Learning_Projects/tree/main/03_Insurance_Fraud_Detection"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="g-caption">
+                          <h4>Insurance Fraud Detection using Machine learning</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <div class="whole-work-box pb-3 mb-3">
+                      <div class="single-gallery">
+                        <div class="gallery-img">
                           <a data-fancybox="gallery" href="">
                             <img src="./assets/img/projects-2.png" class="img-fluid" alt="">
                           </a>
@@ -364,22 +409,6 @@
                         <div class="g-caption">
                           <h4>AI in Healthcare</h4>
                           <p>Data- and simulation-based exploration, analysis, and treatment of vasoconstriction for the prevention of ischemic stroke</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6 col-md-12 col-12">
-                    <div class="whole-work-box pb-3 mb-3">
-                      <div class="single-gallery">
-                        <div class="gallery-img">
-                          <img src="./assets/img/projects-1.png" class="img-fluid" alt="">
-                        </div>
-                        <div class="cap-icon">
-                          <a href="https://github.com/sanghvirajit/IQN-ILS"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
-                        </div>
-                        <div class="g-caption">
-                          <h4>Implementation of Interface Quasi-Newton Least Square model for Fluid-Structure-Interaction using Simerics and Python.</h4>
-                          <p></p>
                         </div>
                       </div>
                     </div>
@@ -425,6 +454,22 @@
                         </div>
                         <div class="g-caption">
                           <h4>Webscraping and Stock Price Analysis using Python and BeautifulSoup </h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-12 col-12">
+                    <div class="whole-work-box pb-3 mb-3">
+                      <div class="single-gallery">
+                        <div class="gallery-img">
+                          <img src="./assets/img/projects-1.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="cap-icon">
+                          <a href="https://github.com/sanghvirajit/IQN-ILS"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="g-caption">
+                          <h4>Implementation of Interface Quasi-Newton Least Square model for Fluid-Structure-Interaction using Simerics and Python.</h4>
+                          <p></p>
                         </div>
                       </div>
                     </div>
