--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>If you find my profile interesting and bealive that I can be a good assert to your company, I request you to reach out to me. Please use the following contact details. I look forward to hearing from you. Thank you for your time. </p>
+          <p>If you find my profile interesting and believe that I can be a good assert to your company, I request you to reach out to me. Please use the following contact details. I look forward to hearing from you. Thank you for your time. </p>
         </div>
 
         <div class="row" data-aos="fade-in">
